Added support for DESTDIR in all relavant Makefiles (https://www.gnu.org/prep/standards/html_node/DESTDIR.html)

--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -296,7 +296,7 @@ debinst: all
 
 install: all
 	$(STRIP) vscpd
-	$(INSTALL_PROGRAM) vscpd $(bindir)
+	$(INSTALL_PROGRAM) vscpd $(DESTDIR)$(bindir)
 	# create folder structure
 	@mkdir -p @VSCPDIR@
 	@mkdir -p @VSCPDIR@/logs
