--- a/m4/Makefile.in
+++ b/m4/Makefile.in
@@ -21,6 +21,7 @@ VPATH = @srcdir@
 prefix = @prefix@
 exec_prefix = @exec_prefix@
 
+datarootdir = @datarootdir@
 bindir = @bindir@
 sbindir = @sbindir@
 libexecdir = @libexecdir@
