Made sure dir structure is in place before install to "strange" places.

--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -296,6 +296,7 @@ debinst: all
 
 install: all
 	$(STRIP) vscpd
+	$(INSTALL_PROGRAM) -d $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) vscpd $(DESTDIR)$(bindir)
 	# create folder structure
 	@mkdir -p @VSCPDIR@
