--- a/src/vscp/vscp-mkpasswd/Makefile.in
+++ b/src/vscp/vscp-mkpasswd/Makefile.in
@@ -116,6 +116,7 @@ vscp-mkpasswd: $(MKPASSWD_OBJECTS)
 
 install: all
 	$(STRIP)  vscp-mkpasswd
+	$(INSTALL_PROGRAM) -d $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) vscp-mkpasswd $(DESTDIR)$(bindir)
 
 uninstall:
