--- a/src/vscp/vscpcmd/Makefile.in
+++ b/src/vscp/vscpcmd/Makefile.in
@@ -128,6 +128,7 @@ vscpmd5.o: ../../common/vscpmd5.c ../../common/vscpmd5.h
 
 install: all
 	$(STRIP) vscpcmd
+	$(INSTALL_PROGRAM) -d $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) vscpcmd $(DESTDIR)$(bindir)
 
 uninstall:
