--- a/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
+++ b/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
@@ -155,7 +155,7 @@ clean:
 	rm -f ../../../common/*.o
 	rm -f ../../../../common/*.o
 	rm -f ../../../../../common/*.o
-	rm -f vscpl2drv_lmsensors.so
+	rm -f vscpl2drv-lmsensors.so
 	rm -f test
 	rm -f *.deb
 	rm -f *.gz
