--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -294,11 +294,17 @@ debinst: all
 	@$(INSTALL_PROGRAM) -b ../../../../config_examples/certs/server.pem @VSCPDIR@/tmp/server.pem
 	@$(INSTALL_PROGRAM) -b ../../../../config_examples/certs/client.pem @VSCPDIR@/tmp/client.pem
 
+install-all: install install-folders install-startup-script install-config install-sample-data install-sample-cert
+
 install: all
 	$(STRIP) vscpd
 	$(INSTALL_PROGRAM) -d $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) vscpd $(DESTDIR)$(bindir)
-	# create folder structure
+
+install-system: install-folders install-startup-script install-config install-sample-data install-sample-cert
+
+install-folders:
+	@echo "- Create folder structure."
 	@mkdir -p @VSCPDIR@
 	@mkdir -p @VSCPDIR@/logs
 	@mkdir -p @VSCPDIR@/actions
@@ -321,13 +327,15 @@ install: all
 	@mkdir -p @VSCPDIR@/mdf
 	@mkdir -p @VSCPDIR@/tmp
 
-	# startup script
+install-startup-script:
+	@echo "- Installing startup script."
 	@if [ ! -e /etc/init.d/vscpd ]; then\
 	    $(INSTALL_PROGRAM) -b -m755 ../../../../config_examples/vscpd.startup_script_debian /etc/init.d/vscpd;\
 	    update-rc.d vscpd defaults;\
 	fi
 
-	# main configuration file
+install-config:
+	@echo "- Installing main configuration file."
 	@mkdir -p /etc/vscp
 	@if [ ! -e /etc/vscp/vscpd.conf ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf;\
@@ -335,36 +343,44 @@ install: all
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
 	fi
 
-	# Example variables
+install-sample-data:
+
+	@echo "- Installing VSCP event database."
+	$(INSTALL_PROGRAM) -b -m744 ../../../../database/vscp_data.sqlite3 @VSCPDIR@/
+
+	@echo "- Installing example variables."
 	@if [ ! -e @VSCPDIR@/variables.xml ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml;\
 	else\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
 	fi
 
-	# Example DM
+	@echo "- Installing example DM."
 	@if [ ! -e @VSCPDIR@/dm.xml ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml;\
-	else\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
-	fi
+ 	else\
+ 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
+ 	fi
 
-	# Sample data for simulation
+	@echo "Installing sample data for simulation."
 	@if [ ! -e @VSCPDIR@/simtempdata.txt ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt;\
-	else\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`;\
+ 	else\
+ 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`;\
 	fi
 
-	# Server sample certificat
+install-sample-cert:
+	@echo "- Installing server sample certificat"
 	@if [ ! -e @VSCPDIR@/certs/server.pem ]; then\
-            $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/server.pem @VSCPDIR@/certs;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/server.pem @VSCPDIR@/certs;\
 	fi
 
-	# Client sample certificat
+	@echo "- Installing client sample certificat."
 	@if [ ! -e @VSCPDIR@/certs/client.pem ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/client.pem @VSCPDIR@/certs;\
 	fi
+
+
 
 uninstall:
 
