Fixed so clean removed all

--- a/src/vscp/linuxvscpl1/Makefile.in
+++ b/src/vscp/linuxvscpl1/Makefile.in
@@ -163,6 +163,7 @@ clean:
 	rm -f libvscpl1.so
 	rm -f libvscpl1.so.$(MAJOR_VERSION)
 	rm -f libvscpl1.so.$(MAJOR_VERSION).$(MINOR_VERSION)
+	rm -f libvscpl1.so.$(MAJOR_VERSION).$(MINOR_VERSION).$(RELEASE_VERSION)
 	rm -f test
 	rm -f *.deb
 	rm -f *.gz
