--- a/src/vscp/drivers/level1/lincan/linux/Makefile.in
+++ b/src/vscp/drivers/level1/lincan/linux/Makefile.in
@@ -55,7 +55,8 @@ uninstall:
 
 install-strip: install
 
-clean: 
+clean:
+	rm -f Makefile
 	rm -rf ./.deps ./.pch
 	rm -f ./*.o
 	rm -f ../common/*.o
