--- a/src/vscp/drivers/level1/can4vscp/linux/Makefile.in
+++ b/src/vscp/drivers/level1/can4vscp/linux/Makefile.in
@@ -116,6 +116,7 @@ deb:    all
 	@mv *.deb ../../../../../../dist
 
 clean:
+	rm -f Makefile
 	rm -rf ./.deps ./.pch
 	rm -f ./*.o
 	rm -f ../common/*.o
