--- a/src/vscp/drivers/level1/logger/linux/Makefile.in
+++ b/src/vscp/drivers/level1/logger/linux/Makefile.in
@@ -107,7 +107,8 @@ deb:    all
 	@mkdir -p ../../../../../../dist
 	@mv *.deb ../../../../../../dist
 
-clean: 
+clean:
+	rm -f Makefile
 	rm -rf ./.deps ./.pch
 	rm -f ./*.o
 	rm -f ../common/*.o
