--- a/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
+++ b/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
@@ -147,7 +147,8 @@ deb:    all
 	@mkdir -p ../../../../../../dist
 	@mv *.deb ../../../../../../dist
 
-clean: 
+clean:
+	rm -f Makefile
 	rm -rf ./.deps ./.pch
 	rm -f ./*.o
 	rm -f ../common/*.o
