--- a/src/vscp/linuxvscpl1/Makefile.in
+++ b/src/vscp/linuxvscpl1/Makefile.in
@@ -153,7 +153,8 @@ deb:    all
 	@mkdir -p ../../../dist
 	@mv *.deb ../../../dist
 
-clean: 
+clean:
+	rm -f Makefile
 	rm -rf ./.deps ./.pch
 	rm -f ./*.o
 	rm -f ../common/*.o
