Cleaned up after build

--- a/Makefile.in
+++ b/Makefile.in
@@ -19,7 +19,10 @@ clean:
 	@for d in $(PROJ_SUBDIRS); do (cd $$d && $(MAKE) clean); done
 	rm -f config.log
 	rm -f config.startup
+	rm -f config.status
 	rm -r m4/Makefile
+	rm -f Makefile
+
 
 install-all: install install-folders install-startup-script install-config install-sample-data install-sample-cert install-manpages
 
