Changing the install config structure (slowly) to work better with deb packages

--- a/Makefile.in
+++ b/Makefile.in
@@ -86,27 +86,27 @@ install-system: install-folders install-startup-script install-config install-sa
 
 install-folders:
 	@echo "- Creating folders."
-	@mkdir -p @VSCPDIR@
-	@mkdir -p @VSCPDIR@/logs
-	@mkdir -p @VSCPDIR@/actions
-	@mkdir -p @VSCPDIR@/scripts
-	@mkdir -p @VSCPDIR@/scripts/javascript
-	@mkdir -p @VSCPDIR@/scripts/lua
-	@mkdir -p @VSCPDIR@/ux
-	@mkdir -p @VSCPDIR@/web
-	@mkdir -p @VSCPDIR@/certs
-	@mkdir -p @VSCPDIR@/drivers
-	@mkdir -p @VSCPDIR@/drivers/level1
-	@mkdir -p @VSCPDIR@/drivers/level2
-	@mkdir -p @VSCPDIR@/upload
-	@mkdir -p @VSCPDIR@/web/css
-	@mkdir -p @VSCPDIR@/web/images
-	@mkdir -p @VSCPDIR@/web/lib
-	@mkdir -p @VSCPDIR@/web/testws
-	@mkdir -p @VSCPDIR@/vscp
-	@mkdir -p @VSCPDIR@/tables
-	@mkdir -p @VSCPDIR@/mdf
-	@mkdir -p @VSCPDIR@/tmp
+	@mkdir -p $(DESTDIR)/@VSCPDIR@
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/logs
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/actions
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/scripts
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/scripts/javascript
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/scripts/lua
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/ux
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/web
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/certs
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/drivers
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/drivers/level1
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/drivers/level2
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/upload
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/web/css
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/web/images
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/web/lib
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/web/testws
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/vscp
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/tables
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/mdf
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/tmp
 
 install-startup-script:
 	@echo "- Installing startup script."
@@ -119,9 +119,9 @@ install-config:
 	@echo "- Installing main configuration file."
 	@mkdir -p /etc/vscp
 	@if [ ! -e /etc/vscp/vscpd.conf ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf;\
+	    $(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro $(DESTDIR)//etc/vscp/vscpd.conf;\
 	else\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
+	    $(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro $(DESTDIR)//etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
 	fi
 
 install-sample-data:
@@ -130,34 +130,34 @@ install-sample-data:
 
 	@echo "- Installing example variables."
 	@if [ ! -e @VSCPDIR@/variables.xml ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro @VSCPDIR@/variables.xml;\
+	    $(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro $(DESTDIR)/@VSCPDIR@/variables.xml;\
 	else\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro @VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
+	    $(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro $(DESTDIR)/@VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
 	fi
 
 	@echo "- Installing example DM."
 	@if [ ! -e @VSCPDIR@/dm.xml ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro @VSCPDIR@/dm.xml;\
+	    $(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro $(DESTDIR)/@VSCPDIR@/dm.xml;\
  	else\
- 	    $(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro @VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
+ 	    $(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro $(DESTDIR)/@VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
  	fi
 
 	@echo "- Installing sample data for simulation."
 	@if [ ! -e @VSCPDIR@/simtempdata.txt ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt;\
+	    $(INSTALL_PROGRAM) -b -m744 config_examples/simulation/simtempdata.txt $(DESTDIR)/@VSCPDIR@/simtempdata.txt;\
  	else\
- 	    $(INSTALL_PROGRAM) -b -m744 config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`;\
+ 	    $(INSTALL_PROGRAM) -b -m744 config_examples/simulation/simtempdata.txt $(DESTDIR)/@VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`;\
 	fi
 
 install-sample-cert:
 	@echo "- Installing server sample certificat."
 	@if [ ! -e @VSCPDIR@/certs/server.pem ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/certs/server.pem @VSCPDIR@/certs;\
+	    $(INSTALL_PROGRAM) -b -m744 config_examples/certs/server.pem $(DESTDIR)/@VSCPDIR@/certs;\
 	fi
 
 	@echo "Installing client sample certificat."
 	@if [ ! -e @VSCPDIR@/certs/client.pem ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/certs/client.pem @VSCPDIR@/certs;\
+	    $(INSTALL_PROGRAM) -b -m744 config_examples/certs/client.pem $(DESTDIR)/@VSCPDIR@/certs;\
 	fi
 
 install-manpages:
