--- a/Makefile.in
+++ b/Makefile.in
@@ -111,7 +111,7 @@ install-folders:
 install-startup-script:
 	@echo "- Installing startup script."
 	@if [ ! -e /etc/init.d/vscpd ]; then\
-	    $(INSTALL_PROGRAM) -b -m755 ../../../../config_examples/vscpd.startup_script_debian /etc/init.d/vscpd;\
+		$(INSTALL_PROGRAM) -b -m755 ../../../../install_files/vscpd.startup_script_debian /etc/init.d/vscpd;\
 	    update-rc.d vscpd defaults;\
 	fi
 
@@ -119,9 +119,9 @@ install-config:
 	@echo "- Installing main configuration file."
 	@mkdir -p /etc/vscp
 	@if [ ! -e /etc/vscp/vscpd.conf ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro $(DESTDIR)//etc/vscp/vscpd.conf;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/vscpd.conf_unix_distro $(DESTDIR)/etc/vscp/vscpd.conf;\
 	else\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro $(DESTDIR)//etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/vscpd.conf_unix_distro $(DESTDIR)/etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
 	fi
 
 install-sample-data:
@@ -130,45 +130,45 @@ install-sample-data:
 
 	@echo "- Installing example variables."
 	@if [ ! -e @VSCPDIR@/variables.xml ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro $(DESTDIR)/@VSCPDIR@/variables.xml;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/variables.xml_distro $(DESTDIR)@VSCPDIR@/variables.xml;\
 	else\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro $(DESTDIR)/@VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/variables.xml_distro $(DESTDIR)@VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
 	fi
 
 	@echo "- Installing example DM."
 	@if [ ! -e @VSCPDIR@/dm.xml ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro $(DESTDIR)/@VSCPDIR@/dm.xml;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/dm.xml_distro $(DESTDIR)@VSCPDIR@/dm.xml;\
  	else\
- 	    $(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro $(DESTDIR)/@VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
+ 	    $(INSTALL_PROGRAM) -b -m744 install_files/dm.xml_distro $(DESTDIR)@VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
  	fi
 
 	@echo "- Installing sample data for simulation."
 	@if [ ! -e @VSCPDIR@/simtempdata.txt ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/simulation/simtempdata.txt $(DESTDIR)/@VSCPDIR@/simtempdata.txt;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/simulation/simtempdata.txt $(DESTDIR)@VSCPDIR@/simtempdata.txt;\
  	else\
- 	    $(INSTALL_PROGRAM) -b -m744 config_examples/simulation/simtempdata.txt $(DESTDIR)/@VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`;\
+ 	    $(INSTALL_PROGRAM) -b -m744 install_files/simulation/simtempdata.txt $(DESTDIR)@VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`;\
 	fi
 
 install-sample-cert:
 	@echo "- Installing server sample certificat."
 	@if [ ! -e @VSCPDIR@/certs/server.pem ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/certs/server.pem $(DESTDIR)/@VSCPDIR@/certs;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/certs/server.pem $(DESTDIR)@VSCPDIR@/certs;\
 	fi
 
 	@echo "Installing client sample certificat."
 	@if [ ! -e @VSCPDIR@/certs/client.pem ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 config_examples/certs/client.pem $(DESTDIR)/@VSCPDIR@/certs;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/certs/client.pem $(DESTDIR/@VSCPDIR@/certs;\
 	fi
 
 install-manpages:
 	@echo "- Installing man-pages."
-	$(INSTALL_PROGRAM) -b -m644 man/vscpd.8 /usr/share/man/man8/
-	$(INSTALL_PROGRAM) -b -m644 man/uvscpd.8 /usr/share/man/man8/
-	$(INSTALL_PROGRAM) -b -m644 man/vscpworks.1 /usr/share/man/man1/
-	$(INSTALL_PROGRAM) -b -m644 man/vscpcmd.1 /usr/share/man/man1/
-	$(INSTALL_PROGRAM) -b -m644 man/vscp-mkpasswd.1 /usr/share/man/man1/
-	$(INSTALL_PROGRAM) -b -m644 man/vscphelperlib.1 /usr/share/man/man1/
-	$(INSTALL_PROGRAM) -b -m644 man/vscpdrivers.7 /usr/share/man/man7/
+	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)/man/vscpd.8 /usr/share/man/man8/
+	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/uvscpd.8 /usr/share/man/man8/
+	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscpworks.1 /usr/share/man/man1/
+	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscpcmd.1 /usr/share/man/man1/
+	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscp-mkpasswd.1 /usr/share/man/man1/
+	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscphelperlib.1 /usr/share/man/man1/
+	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscpdrivers.7 /usr/share/man/man7/
 	mandb
 
 install-web-samples:
