--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -286,13 +286,13 @@ debinst: all
 	$(INSTALL_PROGRAM) vscpd /usr/bin
 	@mkdir -p @VSCPDIR@
 	@mkdir -p @VSCPDIR@/tmp
-	@$(INSTALL_PROGRAM) -b ../../../../config_examples/vscpd.startup_script_debian_debinst @VSCPDIR@/tmp/vscpd.startup_script_debian_debinst
-	@$(INSTALL_PROGRAM) -b ../../../../config_examples/vscpd.conf_unix_distro @VSCPDIR@/tmp/vscpd.conf_unix_distro
-	@$(INSTALL_PROGRAM) -b ../../../../config_examples/variables.xml_distro @VSCPDIR@/tmp/variables.xml_distro
-	@$(INSTALL_PROGRAM) -b ../../../../config_examples/dm.xml_distro @VSCPDIR@/tmp/dm.xml_distro
-	@$(INSTALL_PROGRAM) -b ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/tmp/simtempdata.txt
-	@$(INSTALL_PROGRAM) -b ../../../../config_examples/certs/server.pem @VSCPDIR@/tmp/server.pem
-	@$(INSTALL_PROGRAM) -b ../../../../config_examples/certs/client.pem @VSCPDIR@/tmp/client.pem
+	@$(INSTALL_PROGRAM) -b ../../../../install_files/vscpd.startup_script_debian_debinst @VSCPDIR@/tmp/vscpd.startup_script_debian_debinst
+	@$(INSTALL_PROGRAM) -b ../../../../install_files/vscpd.conf_unix_distro @VSCPDIR@/tmp/vscpd.conf_unix_distro
+	@$(INSTALL_PROGRAM) -b ../../../../install_files/variables.xml_distro @VSCPDIR@/tmp/variables.xml_distro
+	@$(INSTALL_PROGRAM) -b ../../../../install_files/dm.xml_distro @VSCPDIR@/tmp/dm.xml_distro
+	@$(INSTALL_PROGRAM) -b ../../../../install_files/simulation/simtempdata.txt @VSCPDIR@/tmp/simtempdata.txt
+	@$(INSTALL_PROGRAM) -b ../../../../install_files/certs/server.pem @VSCPDIR@/tmp/server.pem
+	@$(INSTALL_PROGRAM) -b ../../../../install_files/certs/client.pem @VSCPDIR@/tmp/client.pem
 
 install-all: install install-folders install-startup-script install-config install-sample-data install-sample-cert
 
@@ -330,7 +330,7 @@ install-folders:
 install-startup-script:
 	@echo "- Installing startup script."
 	@if [ ! -e /etc/init.d/vscpd ]; then\
-	    $(INSTALL_PROGRAM) -b -m755 ../../../../config_examples/vscpd.startup_script_debian /etc/init.d/vscpd;\
+	    $(INSTALL_PROGRAM) -b -m755 ../../../../install_files/vscpd.startup_script_debian /etc/init.d/vscpd;\
 	    update-rc.d vscpd defaults;\
 	fi
 
@@ -338,9 +338,9 @@ install-config:
 	@echo "- Installing main configuration file."
 	@mkdir -p /etc/vscp
 	@if [ ! -e /etc/vscp/vscpd.conf ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/vscpd.conf_unix_distro /etc/vscp/vscpd.conf;\
 	else\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/vscpd.conf_unix_distro /etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
 	fi
 
 install-sample-data:
@@ -350,34 +350,34 @@ install-sample-data:
 
 	@echo "- Installing example variables."
 	@if [ ! -e @VSCPDIR@/variables.xml ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/variables.xml_distro @VSCPDIR@/variables.xml;\
 	else\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/variables.xml_distro @VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/variables.xml_distro @VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
 	fi
 
 	@echo "- Installing example DM."
 	@if [ ! -e @VSCPDIR@/dm.xml ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/dm.xml_distro @VSCPDIR@/dm.xml;\
  	else\
- 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/dm.xml_distro @VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
+ 	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/dm.xml_distro @VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
  	fi
 
 	@echo "Installing sample data for simulation."
 	@if [ ! -e @VSCPDIR@/simtempdata.txt ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt;\
  	else\
- 	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`;\
+ 	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/simulation/simtempdata.txt @VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`;\
 	fi
 
 install-sample-cert:
 	@echo "- Installing server sample certificat"
 	@if [ ! -e @VSCPDIR@/certs/server.pem ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/server.pem @VSCPDIR@/certs;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/certs/server.pem @VSCPDIR@/certs;\
 	fi
 
 	@echo "- Installing client sample certificat."
 	@if [ ! -e @VSCPDIR@/certs/client.pem ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../config_examples/certs/client.pem @VSCPDIR@/certs;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/certs/client.pem @VSCPDIR@/certs;\
 	fi
 
 
