--- a/Makefile.in
+++ b/Makefile.in
@@ -98,6 +98,7 @@ install-folders:
 	@mkdir -p $(DESTDIR)/@VSCPDIR@/drivers
 	@mkdir -p $(DESTDIR)/@VSCPDIR@/drivers/level1
 	@mkdir -p $(DESTDIR)/@VSCPDIR@/drivers/level2
+	@mkdir -p $(DESTDIR)/@VSCPDIR@/drivers/level2
 	@mkdir -p $(DESTDIR)/@VSCPDIR@/upload
 	@mkdir -p $(DESTDIR)/@VSCPDIR@/web/css
 	@mkdir -p $(DESTDIR)/@VSCPDIR@/web/images
@@ -111,7 +112,7 @@ install-folders:
 install-startup-script:
 	@echo "- Installing startup script."
 	@if [ ! -e /etc/init.d/vscpd ]; then\
-		$(INSTALL_PROGRAM) -b -m755 ../../../../install_files/vscpd.startup_script_debian /etc/init.d/vscpd;\
+		$(INSTALL_PROGRAM) -b -m755 ../../../../install_files/unix/vscpd.startup_script_debian /etc/init.d/vscpd;\
 	    update-rc.d vscpd defaults;\
 	fi
 
@@ -119,27 +120,27 @@ install-config:
 	@echo "- Installing main configuration file."
 	@mkdir -p /etc/vscp
 	@if [ ! -e /etc/vscp/vscpd.conf ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 install_files/vscpd.conf_unix_distro $(DESTDIR)/etc/vscp/vscpd.conf;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd $(DESTDIR)/etc/vscp/vscpd.conf;\
 	else\
-	    $(INSTALL_PROGRAM) -b -m744 install_files/vscpd.conf_unix_distro $(DESTDIR)/etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
 	fi
 
 install-sample-data:
 	@echo "- Installing VSCP event database."
-	$(INSTALL_PROGRAM) -b -m744 database/vscp_data.sqlite3 @VSCPDIR@/
+	$(INSTALL_PROGRAM) -b -m744 database/vscp_events.sqlite3 @VSCPDIR@/
 
 	@echo "- Installing example variables."
 	@if [ ! -e @VSCPDIR@/variables.xml ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 install_files/variables.xml_distro $(DESTDIR)@VSCPDIR@/variables.xml;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/variables/variables.xml $(DESTDIR)@VSCPDIR@/variables.xml;\
 	else\
-	    $(INSTALL_PROGRAM) -b -m744 install_files/variables.xml_distro $(DESTDIR)@VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/variables/variables.xml $(DESTDIR)@VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
 	fi
 
 	@echo "- Installing example DM."
 	@if [ ! -e @VSCPDIR@/dm.xml ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 install_files/dm.xml_distro $(DESTDIR)@VSCPDIR@/dm.xml;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/DM/dm.xml $(DESTDIR)@VSCPDIR@/dm.xml;\
  	else\
- 	    $(INSTALL_PROGRAM) -b -m744 install_files/dm.xml_distro $(DESTDIR)@VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
+ 	    $(INSTALL_PROGRAM) -b -m744 install_files/DM/dm.xml $(DESTDIR)@VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
  	fi
 
 	@echo "- Installing sample data for simulation."
@@ -162,7 +163,7 @@ install-sample-cert:
 
 install-manpages:
 	@echo "- Installing man-pages."
-	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)/man/vscpd.8 /usr/share/man/man8/
+	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscpd.8 /usr/share/man/man8/
 	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/uvscpd.8 /usr/share/man/man8/
 	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscpworks.1 /usr/share/man/man1/
 	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscpcmd.1 /usr/share/man/man1/
@@ -182,7 +183,7 @@ fetch_event_database:
 	curl -o/tmp/vscp_data.sql -LOk https://www.vscp.org/events/vscp_events.sql
 	cat /tmp/vscp_data.sql | sqlite3 /tmp/vscp_data.sqlite3
 	cp /tmp/vscp_data.sql database/
-	cp /tmp/vscp_data.sqlite3 database/
+	cp /tmp/vscp_events.sqlite3 database/
 
 delete-all:
 	rm -rf @VSCPDIR@/*
