--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -286,10 +286,10 @@ debinst: all
 	$(INSTALL_PROGRAM) vscpd /usr/bin
 	@mkdir -p @VSCPDIR@
 	@mkdir -p @VSCPDIR@/tmp
-	@$(INSTALL_PROGRAM) -b ../../../../install_files/vscpd.startup_script_debian_debinst @VSCPDIR@/tmp/vscpd.startup_script_debian_debinst
-	@$(INSTALL_PROGRAM) -b ../../../../install_files/vscpd.conf_unix_distro @VSCPDIR@/tmp/vscpd.conf_unix_distro
-	@$(INSTALL_PROGRAM) -b ../../../../install_files/variables.xml_distro @VSCPDIR@/tmp/variables.xml_distro
-	@$(INSTALL_PROGRAM) -b ../../../../install_files/dm.xml_distro @VSCPDIR@/tmp/dm.xml_distro
+	@$(INSTALL_PROGRAM) -b ../../../../install_files/unix/vscpd.startup_script_debian_debinst @VSCPDIR@/tmp/vscpd.startup_script_debian_debinst
+	@$(INSTALL_PROGRAM) -b ../../../../install_files/unix/vscpd.conf @VSCPDIR@/tmp/vscpd.conf_unix_distro
+	@$(INSTALL_PROGRAM) -b ../../../../install_files/variables/variables.xml @VSCPDIR@/tmp/variables.xml_distro
+	@$(INSTALL_PROGRAM) -b ../../../../install_files/DM/dm.xml @VSCPDIR@/tmp/dm.xml_distro
 	@$(INSTALL_PROGRAM) -b ../../../../install_files/simulation/simtempdata.txt @VSCPDIR@/tmp/simtempdata.txt
 	@$(INSTALL_PROGRAM) -b ../../../../install_files/certs/server.pem @VSCPDIR@/tmp/server.pem
 	@$(INSTALL_PROGRAM) -b ../../../../install_files/certs/client.pem @VSCPDIR@/tmp/client.pem
@@ -305,32 +305,33 @@ install-system: install-folders install-startup-script install-config install-sa
 
 install-folders:
 	@echo "- Create folder structure."
-	@mkdir -p @VSCPDIR@
-	@mkdir -p @VSCPDIR@/logs
-	@mkdir -p @VSCPDIR@/actions
-	@mkdir -p @VSCPDIR@/scripts
-	@mkdir -p @VSCPDIR@/scripts/javascript
-	@mkdir -p @VSCPDIR@/scripts/lua
-	@mkdir -p @VSCPDIR@/ux
-	@mkdir -p @VSCPDIR@/web
-	@mkdir -p @VSCPDIR@/certs
-	@mkdir -p @VSCPDIR@/drivers
-	@mkdir -p @VSCPDIR@/drivers/level1
-	@mkdir -p @VSCPDIR@/drivers/level2
-	@mkdir -p @VSCPDIR@/upload
-	@mkdir -p @VSCPDIR@/web/css
-	@mkdir -p @VSCPDIR@/web/images
-	@mkdir -p @VSCPDIR@/web/lib
-	@mkdir -p @VSCPDIR@/web/testws
-	@mkdir -p @VSCPDIR@/vscp
-	@mkdir -p @VSCPDIR@/tables
-	@mkdir -p @VSCPDIR@/mdf
-	@mkdir -p @VSCPDIR@/tmp
+	@mkdir -p $(DESTDIR)@VSCPDIR@
+	@mkdir -p $(DESTDIR)@VSCPDIR@/logs
+	@mkdir -p $(DESTDIR)@VSCPDIR@/actions
+	@mkdir -p $(DESTDIR)@VSCPDIR@/scripts
+	@mkdir -p $(DESTDIR)@VSCPDIR@/scripts/javascript
+	@mkdir -p $(DESTDIR)@VSCPDIR@/scripts/lua
+	@mkdir -p $(DESTDIR)@VSCPDIR@/ux
+	@mkdir -p $(DESTDIR)@VSCPDIR@/web
+	@mkdir -p $(DESTDIR)@VSCPDIR@/certs
+	@mkdir -p $(DESTDIR)@VSCPDIR@/drivers
+	@mkdir -p $(DESTDIR)@VSCPDIR@/drivers/level1
+	@mkdir -p $(DESTDIR)@VSCPDIR@/drivers/level2
+	@mkdir -p $(DESTDIR)@VSCPDIR@/drivers/level2
+	@mkdir -p $(DESTDIR)@VSCPDIR@/upload
+	@mkdir -p $(DESTDIR)@VSCPDIR@/web/css
+	@mkdir -p $(DESTDIR)@VSCPDIR@/web/images
+	@mkdir -p $(DESTDIR)@VSCPDIR@/web/lib
+	@mkdir -p $(DESTDIR)@VSCPDIR@/web/testws
+	@mkdir -p $(DESTDIR)@VSCPDIR@/vscp
+	@mkdir -p $(DESTDIR)@VSCPDIR@/tables
+	@mkdir -p $(DESTDIR)@VSCPDIR@/mdf
+	@mkdir -p $(DESTDIR)@VSCPDIR@/tmp
 
 install-startup-script:
 	@echo "- Installing startup script."
 	@if [ ! -e /etc/init.d/vscpd ]; then\
-	    $(INSTALL_PROGRAM) -b -m755 ../../../../install_files/vscpd.startup_script_debian /etc/init.d/vscpd;\
+	    $(INSTALL_PROGRAM) -b -m755 ../../../../install_files/unix/vscpd.startup_script_debian /etc/init.d/vscpd;\
 	    update-rc.d vscpd defaults;\
 	fi
 
@@ -338,9 +339,9 @@ install-config:
 	@echo "- Installing main configuration file."
 	@mkdir -p /etc/vscp
 	@if [ ! -e /etc/vscp/vscpd.conf ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/vscpd.conf_unix_distro /etc/vscp/vscpd.conf;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/unix/vscpd.conf /etc/vscp/vscpd.conf;\
 	else\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/vscpd.conf_unix_distro /etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/unix/vscpd.conf /etc/vscp/vscpd.conf.`date +'%Y%m%d'`;\
 	fi
 
 install-sample-data:
@@ -350,16 +351,16 @@ install-sample-data:
 
 	@echo "- Installing example variables."
 	@if [ ! -e @VSCPDIR@/variables.xml ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/variables.xml_distro @VSCPDIR@/variables.xml;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/variables/variables.xml @VSCPDIR@/variables.xml;\
 	else\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/variables.xml_distro @VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/variables/variables.xml @VSCPDIR@/variables.xml.`date +'%Y%m%d'`;\
 	fi
 
 	@echo "- Installing example DM."
 	@if [ ! -e @VSCPDIR@/dm.xml ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/dm.xml_distro @VSCPDIR@/dm.xml;\
+	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/DM/dm.xml @VSCPDIR@/dm.xml;\
  	else\
- 	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/dm.xml_distro @VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
+ 	    $(INSTALL_PROGRAM) -b -m744 ../../../../install_files/DM/dm.xml @VSCPDIR@/dm.xml.`date +'%Y%m%d'`;\
  	fi
 
 	@echo "Installing sample data for simulation."
