--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -215,7 +215,7 @@
         index_files="index.xhtml,index.html,index.htm,index.lp,index.lsp,index.lua,index.cgi,index.shtml,index.php"
         authentication_domain="mydomain.com"
         enable_auth_domain_check="false"
-        ssl_certificate="/srv/vscp/serts/server.pem"
+        ssl_certificate="/srv/vscp/certs/server.pem"
         ssl_certificate_chain=""
         ssl_verify_peer="false"
         ssl_ca_path=""
