Changed tcp port default  to standard value (removed  prefix tcp://)

--- a/install_files/unix/vscpd.conf
+++ b/install_files/unix/vscpd.conf
@@ -95,7 +95,7 @@
         between them.
     -->
     <tcpip enable="true"
-        interface="tcp://9598" />
+        interface="9598" />
 
     <!--
       It is possible to enable/disable the UDP interface
