--- a/Makefile.in
+++ b/Makefile.in
@@ -24,7 +24,7 @@ clean:
 	rm -f Makefile
 
 
-install-all: install install-folders install-startup-script install-config install-sample-data install-sample-cert install-manpages
+install-all: install install-folders install-startup-script install-config install-sample-data install-sample-certs install-manpages
 
 install:
 # Install sub components
@@ -49,7 +49,7 @@ install:
 	@echo
 	@echo "5.) Use 'make install-sample-data' to install on-line docs."
 	@echo
-	@echo "6.) Use 'make install-sample-cert' to install on-line docs."
+	@echo "6.) Use 'make install-sample-certs' to install on-line docs."
 	@echo
 	@echo "Steps 1-6 can be done with 'make install-system' or 'make install-all'"
 	@echo
@@ -82,7 +82,7 @@ install:
 	@echo "   Have fun and remember to always be hungry and stay foolish or the other way"
 	@echo "   around be foolish - stay hungry! - There is always a choice."
 
-install-system: install-folders install-startup-script install-config install-sample-data install-sample-cert install-manpages
+install-system: install-folders install-startup-script install-config install-sample-data install-sample-certs install-manpages
 
 install-folders:
 	@echo "- Creating folders."
@@ -150,16 +150,26 @@ install-sample-data:
  	    $(INSTALL_PROGRAM) -b -m744 install_files/simulation/simtempdata.txt $(DESTDIR)@VSCPDIR@/simtempdata.txt.`date +'%Y%m%d'`;\
 	fi
 
-install-sample-cert:
-	@echo "- Installing server sample certificate."
+install-sample-certs:
+	@echo "- Installing web server sample certificate."
 	@if [ ! -e @VSCPDIR@/certs/server.pem ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 install_files/certs/server.pem $(DESTDIR)@VSCPDIR@/certs;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/certs/server.pem $(DESTDIR)@VSCPDIR@/certs/;\
 	fi
 
-	@echo "Installing client sample certificat."
+	@echo "- Installing web client sample certificat."
 	@if [ ! -e @VSCPDIR@/certs/client.pem ]; then\
-	    $(INSTALL_PROGRAM) -b -m744 install_files/certs/client.pem $(DESTDIR)/@VSCPDIR@/certs;\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/certs/client.pem $(DESTDIR)@VSCPDIR@/certs/;\
 	fi
+
+	@echo "- Installing tcp/ip server sample certificate."
+	@if [ ! -e @VSCPDIR@/certs/tcpip_server.pem ]; then\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/certs/tcpip_server.pem $(DESTDIR)@VSCPDIR@/certs/;\
+	fi
+
+	@echo "- Installing tcp/ip client sample certificat."
+	@if [ ! -e @VSCPDIR@/certs/tcpip_client.pem ]; then\
+	    $(INSTALL_PROGRAM) -b -m744 install_files/certs/tcpip_client.pem $(DESTDIR)@VSCPDIR@/certs/;\
+	fi	
 
 install-manpages:
 	@echo "- Installing man-pages."
