--- a/Makefile.in
+++ b/Makefile.in
@@ -26,7 +26,7 @@ clean:
 
 install-all: install install-folders install-startup-script install-config install-sample-data install-sample-certs install-manpages
 
-install:
+install: install-folders install-startup-script install-config install-sample-data install-sample-certs install-manpages
 # Install sub components
 	@for d in $(PROJ_SUBDIRS); do (echo "====================================================" &&\
 	echo "Building in dir " $$d && echo "====================================================" && cd $$d && $(MAKE) install); done
@@ -112,13 +112,13 @@ install-folders:
 install-startup-script:
 	@echo "- Installing startup script."
 	@if [ ! -e /etc/init.d/vscpd ]; then\
-		$(INSTALL_PROGRAM) -b -m755 ../../../../install_files/unix/vscpd.startup_script_debian /etc/init.d/vscpd;\
+		$(INSTALL_PROGRAM) -b -m755 install_files/unix/vscpd.startup_script_debian $(DESTDIR)/etc/init.d/vscpd;\
 	    update-rc.d vscpd defaults;\
 	fi
 
 install-config:
 	@echo "- Installing main configuration file."
-	@mkdir -p /etc/vscp
+	@mkdir -p $(DESTDIR)/etc/vscp
 	@if [ ! -e /etc/vscp/vscpd.conf ]; then\
 	    $(INSTALL_PROGRAM) -b -m744 install_files/unix/vscpd.conf $(DESTDIR)/etc/vscp/vscpd.conf;\
 	else\
@@ -173,13 +173,13 @@ install-sample-certs:
 
 install-manpages:
 	@echo "- Installing man-pages."
-	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscpd.8 /usr/share/man/man8/
-	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/uvscpd.8 /usr/share/man/man8/
-	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscpworks.1 /usr/share/man/man1/
-	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscpcmd.1 /usr/share/man/man1/
-	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscp-mkpasswd.1 /usr/share/man/man1/
-	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscphelperlib.1 /usr/share/man/man1/
-	$(INSTALL_PROGRAM) -b -m644 $(DESTDIR)man/vscpdrivers.7 /usr/share/man/man7/
+	$(INSTALL_PROGRAM) -b -m644 man/vscpd.8 $(DESTDIR)/usr/share/man/man8/
+	$(INSTALL_PROGRAM) -b -m644 man/uvscpd.8 $(DESTDIR)/usr/share/man/man8/
+	$(INSTALL_PROGRAM) -b -m644 man/vscpworks.1 $(DESTDIR)/usr/share/man/man1/
+	$(INSTALL_PROGRAM) -b -m644 man/vscpcmd.1 $(DESTDIR)/usr/share/man/man1/
+	$(INSTALL_PROGRAM) -b -m644 man/vscp-mkpasswd.1 $(DESTDIR)/usr/share/man/man1/
+	$(INSTALL_PROGRAM) -b -m644 man/vscphelperlib.1 $(DESTDIR)/usr/share/man/man1/
+	$(INSTALL_PROGRAM) -b -m644 man/vscpdrivers.7 $(DESTDIR)/usr/share/man/man7/
 	mandb
 
 install-web-samples:
